# crest4

./: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: continuous_testing.yml  pytest_master_branch.yml  test_conda_mac.yml  test_conda_macos.yml  test_conda_release.yml  test_conda_ubuntu.yml  test_pypi_mac.yml  test_pypi_macos.yml  test_pypi_release.yml  test_pypi_ubuntu.yml
crest4/: __init__.py  __main__.py  classify.py  crest4_db_urls.json  databases.py  otu_tables.py  query.py
crest4/tests/: .gitignore  pytest.ini  run.yml
crest4/tests/actualize_database/: README.md  run_test.py
crest4/tests/cmd_line_tool/: run_test.py
crest4/tests/cmd_line_tool_test/: README.md  run_test.py
crest4/tests/custom_database/: README.md  run_test.py
crest4/tests/custom_database/custom/: .gitignore  custom.map
crest4/tests/custom_database/other_database/: custom.fasta  custom.names  custom.tre
crest4/tests/db_midori/: README.md  run_test.py  seq.fasta
crest4/tests/db_mitofish/: README.md  run_test.py  seq.fasta
crest4/tests/gio_hundred_seqs/: .gitignore  README.md  expected.csv  gio.fasta
crest4/tests/hmp_mock_dataset/: README.md
crest4/tests/long_otus_confident/: README.md  consensus.fasta
crest4/tests/min_score_string/: README.md  run_test.py
crest4/tests/ncbi_two_sequences/: README.md  generate.py  run_test.py
crest4/tests/no_hits_sequence/: run_test.py
crest4/tests/precomputed_hits/: README.md  precomputed.hits  run_test.py  silvamod128.hits  two_seqs.fasta
crest4/tests/readme_example_seq/: README.md  run_test.py
crest4/tests/score_drop_change/: README.md  run_test.py
crest4/tests/vsearch_test/: README.md  run_test.py
crest4/tests/with_otu_table/: README.md  otu_table.tsv  otu_table_bad.tsv  otu_table_good.tsv  run_test.py  seqs.fasta
docs/: crest4.html  index.html  install_from_source.md  installing_tips.md  search.js
docs/crest4/: assign.html  classify.html  databases.html  index.html  otu_tables.html  query.html  sh.html
docs/crest4/tests/: index.html
docs/crest4/tests/actualize_database/: index.html  run_test.html
docs/crest4/tests/cmd_line_tool/: index.html  run_test.html
docs/crest4/tests/cmd_line_tool_test/: index.html  run_test.html
docs/crest4/tests/custom_database/: index.html  run_test.html
docs/crest4/tests/ncbi_two_sequences/: generate.html  index.html  run_test.html
docs/crest4/tests/no_hits_sequence/: index.html  run_test.html
docs/crest4/tests/precomputed_hits/: index.html  run_test.html
docs/crest4/tests/readme_example_seq/: index.html  (+1 more)
tests/ncbi_two_sequences/: run_test.py
tests/no_hits_sequence/: README.md  no_hits.fasta  run_test.py
tests/readme_example_seq/: readme_test.fasta
(+6 files in other folders)
